# CafeInternetManager

./: .gitignore  .gitmodules  LICENSE  MASTER_DESIGN.md  Makefile  README.md  app.js  deployment_guide.md  docker-compose.yml  index.html  keylog.txt  logs_gateway.bat  machines.json  makefile  move_docker.ps1  probe_backend.py  rebuild_backend.ps1  run_gateway.sh  server  setup_linux.sh  start_all.bat  test.sh  webcam.h264  websocket_server  wol.py
backend/: CMakeLists.txt  Dockerfile  build_linux.sh  main.cpp  setup_backend_linux.sh  setup_backend_windows.ps1  setup_linux.sh  test_output.txt
backend/api/: application.cpp  application.hpp  keylogger.cpp  keylogger.hpp  keylogger_find.cpp  keylogger_lifecycle.cpp  keylogger_utils.cpp  machine.h  monitor.cpp  monitor.hpp  process.cpp  process.hpp  webcam.cpp  webcam.hpp
backend/build_linux/: BackendServer  CMakeCache.txt  Makefile  cmake_install.cmake
backend/build_verify/: CMakeCache.txt  Makefile  cmake_install.cmake
backend/build_win/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  BackendServer.vcxproj  BackendServer.vcxproj.filters  CMakeCache.txt  Makefile  UniversalAgent.slnx  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  backend_core.vcxproj  backend_core.vcxproj.filters  backend_hal.vcxproj  backend_hal.vcxproj.filters  cmake_install.cmake
backend/build_win/BackendServer.dir/Debug/: BackendServer.exe.recipe
backend/build_win/BackendServer.dir/Debug/BackendServer.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
backend/build_win/Debug/: backend_core.lib  backend_hal.lib
backend/build_win/backend_core.dir/Debug/backend_core.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
backend/build_win/backend_hal.dir/Debug/: backend_hal.lib.recipe
backend/build_win/backend_hal.dir/Debug/backend_hal.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
backend/build_win/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
backend/build_win/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog
backend/build_win/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
backend/include/common/: Cancellation.hpp  Result.hpp  VideoTypes.hpp
backend/include/core/: BackendServer.hpp  BroadcastBus.hpp  CommandDispatcher.hpp  DiscoveryClient.hpp  GatewayConnection.hpp  GatewayProtocolV1.hpp  ICommand.hpp  NetworkDefs.hpp  PlatformRegistry.hpp  Protocol.hpp  StreamSession.hpp  ThreadPool.hpp
backend/include/handlers/: AppCommandHandler.hpp  FileCommandHandler.hpp  KeyloggerCommandHandler.hpp  MouseCommandHandler.hpp  StreamCommandHandler.hpp
backend/include/interfaces/: IAppManager.hpp  IFileTransfer.hpp  IGatewayProtocol.hpp  IInputInjector.hpp  IKeylogger.hpp  INetworkSocket.hpp  IPlatformFactory.hpp  IVideoStreamer.hpp
backend/include/testing/: MockStreamer.hpp
backend/net/: backend_server.cpp  backend_server.h  http.h  receiver.h  sender.h  websocket_connection.h  websocket_server.h
backend/src/: main.cpp
backend/src/core/: BackendServer.cpp  BackendServer.cpp.bak  BroadcastBus.cpp  CommandDispatcher.cpp  DiscoveryClient.cpp  GatewayConnection.cpp  GatewayProtocolV1.cpp  PlatformRegistry.cpp  StreamSession.cpp
backend/src/core/network/: PacketDispatcher.cpp  PacketDispatcher.hpp  TcpSocket.cpp  TcpSocket.hpp
backend/src/handlers/: AppCommandHandler.cpp  FileCommandHandler.cpp  KeyloggerCommandHandler.cpp  MouseCommandHandler.cpp  StreamCommandHandler.cpp
backend/src/platform/linux/: LinuxAppManager.cpp  LinuxAppManager.hpp  LinuxEvdevLogger.cpp  LinuxEvdevLogger.hpp  LinuxFileTransfer.cpp  LinuxFileTransfer.hpp  LinuxInputInjectorFactory.cpp  LinuxInputInjectorFactory.hpp  LinuxPipeWireStreamer.cpp  LinuxPipeWireStreamer.hpp  LinuxPlatformFactory.cpp  LinuxPlatformFactory.hpp  LinuxUInputInjector.cpp  LinuxUInputInjector.hpp  LinuxWebcamStreamer.cpp  LinuxWebcamStreamer.hpp  LinuxX11Streamer.cpp  LinuxX11Streamer.hpp  LinuxXTestInjector.cpp  LinuxXTestInjector.hpp
backend/src/platform/macos/: MacOSAppManager.hpp  MacOSAppManager.mm  MacOSFileTransfer.cpp  MacOSFileTransfer.hpp  MacOSInputInjector.hpp  MacOSInputInjector.mm  MacOSKeylogger.hpp  MacOSKeylogger.mm  MacOSPlatformFactory.hpp  MacOSPlatformFactory.mm  MacOSScreenStreamer.hpp  MacOSScreenStreamer.mm  MacOSWebcamStreamer.hpp  MacOSWebcamStreamer.mm
backend/src/platform/windows/: WindowsAppManager.cpp  WindowsAppManager.hpp  WindowsFileTransfer.cpp  WindowsFileTransfer.hpp  WindowsInputInjector.cpp  WindowsInputInjector.hpp  WindowsKeylogger.cpp  WindowsKeylogger.hpp  WindowsPlatformFactory.cpp  WindowsPlatformFactory.hpp  WindowsScreenStreamer.cpp  WindowsScreenStreamer.hpp  WindowsWebcamStreamer.cpp  WindowsWebcamStreamer.hpp
backend/src/tests/: LinuxPlatformTest.cpp  MacOSPlatformTest.mm  WindowsPlatformTest.cpp
backend/util/: sha1.h
frontend/: README.md  index.html  package-lock.json  package.json  tsc_output.txt  tsconfig.json
frontend-v2/: index.html  package-lock.json  package.json  vite.config.ts
frontend-v2/src/: main.ts
frontend/src/: app.ts  main.ts
frontend/test/: mock_gateway.js
gateway-win/: CMakeLists.txt  build.bat
gateway-win/build_mingw/: CMakeCache.txt  Makefile  cmake_install.cmake
gateway-win/include/: backend.h  discovery.h  gateway.h  mempool.h  metrics.h  platform.h  queue.h  thread.h  utils.h  websocket.h
gateway-win/src/: backend.c  discovery.c  main.c  mempool.c  queue.c  thread.c  utils.c  websocket.c
include/: config.h
src/: main.cpp  server.cpp
src/api/: frame_capture.h  keyboard.h  keylogger.h  process_manipulate.h  shutdown_machine.h  webcam.h
src/app/: application.hpp
src/capture/: screen_capture.hpp  webcam_capture.hpp
src/commands/: handlers.hpp  (+1 more)
ui-test/: test_ui.js
(+104 files in other folders)
